[[bin]]
name = "rtc"
path = "src/bin/rtc.rs"

[package]
name = "rtc"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_json = "1.0.48"
tungstenite = "0.10.1"